<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fifteen_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/total_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/the_total_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all_page_view" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/one_dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/fifteen_dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:color/holo_orange_light"
            android:paddingLeft="@dimen/fifteen_dp"
            android:paddingRight="@dimen/fifteen_dp"
            android:text="@string/recent_posts" />


    </RelativeLayout>

    <ListView
        android:id="@+id/pop_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/fifteen_dp" />

</LinearLayout>