<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recent_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fifteen_dp"
            android:src="@mipmap/common_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_recent"
            android:textSize="@dimen/fifteen_sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/color_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fifteen_dp"
        android:paddingTop="@dimen/fifteen_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:text="@string/activity_type" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="@dimen/five_dp"
            android:src="@mipmap/discovery_recent_icon_down" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:text="@string/activity_time" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighty_dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="@dimen/five_dp"
            android:src="@mipmap/discovery_recent_icon_down" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/color_grey" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/recent_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fifteen_dp"
        android:paddingRight="@dimen/fifteen_dp"
        android:background="@android:color/white" />

</LinearLayout>